# whatsapp-chat-system-hermes

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  TODO.md  alembic.ini  package-lock.json  package.json  pyproject.toml  vercel.json
.claude/: settings.json
.github/: frontend-reliability-trigger  reliability-trigger.txt
bridge/: package-lock.json  package.json
deploy/: apply-production.sh
docs/: ARCHITECTURE.md  CHANGELOG_AGENT.md  DECISIONS.md  DEPLOYMENT.md  DEVELOPMENT_CHECKS.md  PROJECT_MEMORY.md  SDD.md  SECURITY_CLEANUP_PLAN.md  TAURI2.md  TODO_AGENT.md  translation-corpus.md
migrations/: env.py
scripts/: apply-standalone-mainline.py  check-bridge-staged.sh  check-pre-push.sh  check-staged-diff.sh  claude-post-edit.py  deploy-frontend-prod.sh  setup-dev.sh  sync_laotalk_corpus.py  update-outbox-test-contract.py  validate-tauri.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: conftest.py  test_account_reconciler.py  test_accounts_api.py  test_accounts_service.py  test_ai_profile_models.py  test_ai_provider.py  test_analysis_job_repository.py  test_auto_reply_reconciler.py  test_auto_reply_worker.py  test_bridge_client.py  test_cli.py  test_contact_conversation_lifecycle.py  test_db_migrations.py  test_db_session.py  test_i18n_consistency.py  test_incremental_cursor.py  test_language.py  test_messaging.py  test_model_resolution.py  test_origins.py  test_outbox_leases.py  test_pagination.py  test_parsing.py  test_personas.py  (+18 more)
(+214 files in other folders)
