[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whatsapp-chat-system"
version = "0.2.0"
description = "WhatsApp support chat automation system for Hermes workspaces"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "requests>=2.31.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "SQLAlchemy>=2.0",
  "Alembic>=1.13.0",
  "cryptography>=42.0.0",
]

[project.scripts]
whatsapp-chat-system = "whatsapp_chat_system.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
